@@ -4,8 +4,13 @@ Version 2.0:
 - Changed CtagsInterface to use a Lucene index for the tag information instead
   of a relational database. This was done mainly to improve performance of
   queries that need to check substrings of the values in the database.
-  As a result, dynamic action queries (which used to be in SQL) need to be
-  replaced by Lucene queries.
+  Switching to Lucene also allows fuzzy tag queries.
+  As a result:
+  - Dynamic action queries (which used to be in SQL) need to be converted
+    manually to Lucene queries, e.g.:
+    _name:{tag} AND kind:function AND origin:PROJECT\:{project}
+  - All database-related configuration was removed, including the "Change
+    database settings" dialog.
 - Added progress indication while tagging. A new dockable shows the Ctags
   verbose output. Each tagging task has its own tab in the dockable, and there
   is an option to automatically close the tab when the tagging is over.
